added more views no style for now

--- a/working_with_express/views/posts.hbs
+++ b/working_with_express/views/posts.hbs
@@ -1,10 +1,8 @@
-
 <!DOCTYPE html>
 <html lang="en">
     {{>main}}
 <body>
     {{>nav}}
-    <h1>Hello !!!</h1>
+    <h1>All Posts Page</h1>
 </body>
 </html>
-
