--- a/user_app/views/add.hbs
+++ b/user_app/views/add.hbs
@@ -3,5 +3,13 @@
 
 <h1>Add User</h1>
 
+<form method="POST">
+    <input type="text" name="name" placeholder="name">
+    <input type="email" name="email" placeholder="email">
+    <input type="number" name="age" placeholder="age">
+    <input type="text" name="address" placeholder="address">
+
+    <input type="submit" value="Add">
+</form>
 
 {{> footer }}
