displaying all users and single one

--- a/user_app/views/showSingle.hbs
+++ b/user_app/views/showSingle.hbs
@@ -3,6 +3,15 @@
 
 <h1>Show single</h1>
 
+    {{user.name}}
+    <br>
+    {{user.email}}
+    <br>
+    {{user.age}}
+    <br>
+    {{user.address}}
+    <br>
+
 {{> footer }}
 
 
