--- a/user_app/views/showAll.hbs
+++ b/user_app/views/showAll.hbs
@@ -3,5 +3,18 @@
 
 <h1>Show all</h1>
 
+{{#each users}}
+
+    <h2>{{this.name}}</h2>
+    <h2>{{this.email}}</h2>
+    <h2>{{this.age}}</h2>
+    <h2>{{this.address}}</h2>
+
+    <a href="/show-single/{{this.id}}">{{this.name}}'s page</a>
+    <br>
+
+{{/each}}
+
+
 {{> footer }}
 
