--- a/user_app/views/showSingle.hbs
+++ b/user_app/views/showSingle.hbs
@@ -12,6 +12,11 @@
     {{user.address}}
     <br>
 
+    <h5>Modifiy user</h5>
+
+    <a href="/delete/{{user.id}}">Delete User</a>
+    <a href="/edit/{{user.id}}">Edit User</a>
+
 {{> footer }}
 
 
