--- a/customer_app/views/edit.hbs
+++ b/customer_app/views/edit.hbs
@@ -5,9 +5,7 @@
 
 <form method="POST">
     <input type="text" name="name" placeholder="{{user.name}}">
-    <input type="email" name="email" placeholder="{{user.email}}">
-    <input type="number" name="age" placeholder="{{user.age}}">
-    <input type="text" name="address" placeholder="{{user.address}}">
+    <input type="text" name="balance" placeholder="{{user.balance}}">
 
     <input type="submit" value="Edit User">
 </form>
