--- a/customer_app/views/showAll.hbs
+++ b/customer_app/views/showAll.hbs
@@ -1,25 +1,21 @@
 {{> header }}
+<br>
 {{> nav }}
+<br>
 
 <h1>Show all</h1>
+<br>
 
-{{#each users}}
+{{#each customers}}
 
     <h2>{{this.name}}</h2>
-    <h2>{{this.email}}</h2>
-    <h2>{{this.age}}</h2>
-    <h2>{{this.address}}</h2>
 
-    <a href="/show-single/{{this.id}}">{{this.name}}'s page</a>
-
-    {{#unless  this.status }}
-        <button>Activate</button>
-    {{/unless}}
+    <a href="/show-single/{{this.account_num}}">{{this.name}}'s page</a>
 
     <br>
 
 {{/each}}
 
-
+<br>
 {{> footer }}
 
