finished the customer app

--- a/customer_app/views/showAll.hbs
+++ b/customer_app/views/showAll.hbs
@@ -10,7 +10,7 @@
 
     <h2>{{this.name}}</h2>
 
-    <a href="/show-single/{{this.account_num}}">{{this.name}}'s page</a>
+    <a href="/show-single/{{this._id}}">{{this.name}}'s page</a>
 
     <br>
 
